# cs7785_ros_ws

./: .bandit.toml  .clang-format  .gitignore  .pre-commit-config.yaml  .rsync_include_package  .ruff.toml  Dockerfile  connect.sh  docker-compose.yaml  readme.md  start.sh  stop.sh
.dev_container/: dev_container.json
Lab5_Gazebo-main/: 7785_maze.launch.py  7785_maze.world  README.md
Lab5_Gazebo-main/7785_maze/: model.config
Lab5_Gazebo-main/7785_maze/meshes/: 7785_maze.dae
explore/: localize.ipynb  mapping.ipynb  plan.ipynb  plane_direction.ipynb  preprocess_echo.py  segment_line.ipynb  split_and_merge.ipynb
explore/data/: data.yml  laser_scan_1.yml  laser_scan_set_1.yml
libs/: list.txt
ros_ws/maps/: map_1.pgm  map_1.yaml  map_1_keepout.pgm  map_1_keepout.yaml  map_sim.pgm  map_sim.yaml  map_sim_1.pgm  map_sim_1.yaml  map_sim_fix_1.pgm  map_sim_fix_1.yaml
ros_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros_ws/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
ros_ws/src/dummy_data/: package.xml  setup.cfg  setup.py
ros_ws/src/dummy_data/dummy_data/: dummy_laser_scan_publisher.py  dummy_polygon_array_publisher.py  dummy_polygon_stamped_publisher.py
ros_ws/src/my_package_cpp/: CMakeLists.txt  package.xml
ros_ws/src/my_package_cpp/src/: my_node_cpp.cpp
ros_ws/src/my_package_python/: package.xml  setup.py
ros_ws/src/py_pubsub/: package.xml  setup.py
ros_ws/src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
ros_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/robot_interfaces/action/: Control.action  GoToTarget.action  PathPlan.action
ros_ws/src/robot_interfaces/msg/: ImageDict.msg  PlaneNormalDistance.msg  PlaneNormalDistanceArrayStamped.msg  PlaneNormalDistanceStamped.msg  PolygonArrayStamped.msg
ros_ws/src/rviz_custom_plugins/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
ros_ws/src/rviz_custom_plugins/include/rviz_custom_plugins/: polygon_array_display.hpp
ros_ws/src/rviz_custom_plugins/src/: polygon_array_display.cpp
ros_ws/src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_dqn_world/obstacle_plugin/: CMakeLists.txt  obstacle1.cc  obstacle2.cc  obstacles.cc
ros_ws/src/v4l2_camera/: v4l2_camera.yaml
ros_ws/src/wachakorn_chase_object/: package.xml  setup.cfg  setup.py
ros_ws/src/wachakorn_chase_object/launch/: lab_2_bang_bang_launch.py  lab_3_chase_launch.py
ros_ws/src/wachakorn_chase_object/param/: camera_param.yaml
ros_ws/src/wachakorn_chase_object/wachakorn_chase_object/: bang_bang_controller.py  camera_utils.py  chase_object_controller.py  clamped_proportional_controller.py  controller.py  filter_scan_points.py  image_viewer.py  linear_robot_action.py  object_bounding_to_plane.py  object_localize_filter.py  parameter_utils.py  ros_utils.py  rotate_robot_action.py  rotate_robot_bang_bang.py  track_color.py  track_color_headless.py  track_color_ui.py
ros_ws/src/wachakorn_nav_stack_command/: package.xml  setup.cfg  setup.py
ros_ws/src/wachakorn_nav_stack_command/launch/: nav_launch.py  nav_real_keepout_launch.py
ros_ws/src/wachakorn_nav_stack_command/param/: burger_nav_real.yaml  burger_nav_sim.yaml
ros_ws/src/wachakorn_nav_stack_command/wachakorn_nav_stack_command/: post_goal_real.py  post_goal_sim.py
ros_ws/src/wachakorn_navigate_to_goal/: package.xml  setup.cfg  setup.py
ros_ws/src/wachakorn_navigate_to_goal/launch/: lab_4_robot_launch.py  lab_4_run_launch.py
scripts/: package.sh  track_color.py  video_viewer.py
setup/: entrypoint.sh
test_cpp/slam_1/: CMakeLists.txt
(+50 files in other folders)
